--- a/Dockerfile.base_python
+++ b/Dockerfile.base_python
@@ -1,4 +1,4 @@
-FROM ubuntu:artful AS tipsi_base
+FROM ubuntu:bionic AS tipsi_base
 
 MAINTAINER Kirill Pinchuk <cybergrind@gmail.com>
 RUN echo '20 Feb 2018'
