--- a/Dockerfile.base_python
+++ b/Dockerfile.base_python
@@ -1,4 +1,4 @@
-FROM ubuntu:bionic AS tipsi_base
+FROM ubuntu:bionic AS fan_base
 
 MAINTAINER Kirill Pinchuk <cybergrind@gmail.com>
 RUN echo '20 Feb 2018'
@@ -7,7 +7,7 @@ ENV LANG C.UTF-8
 ENV LANGUAGE C.UTF-8
 ENV LC_ALL C.UTF-8
 ENV SUPERVISOR_CONFIG supervisor-app.conf
-ENV LOG_DIR /var/log/tipsi
+ENV LOG_DIR /var/log/fan_logs
 ENV PYTHONPATH=.
 
 # Redefine next variables
