--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -1,9 +1,9 @@
-name: Push Tags
+name: Push Latest
 
 on:
   push:
-    tags:
-      - '*'
+    branches:
+      - 'master'
 
 jobs:
 
@@ -13,10 +13,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - run: docker pull ghcr.io/micro-fan/python:latest; true
-    - run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
     - uses: docker/login-action@v1
       with:
         registry: ghcr.io
         username: ${{ github.repository_owner }}
         password: ${{ secrets.GHCR_TOKEN }}
-    - run: TAG_NAME=${{ env.RELEASE_VERSION }} make push_ghcr_image
+    - run: TAG_NAME=latest make push_ghcr_image
