--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -19,3 +19,4 @@ jobs:
         password: ${{ secrets.GHCR_TOKEN }}
     - run: docker pull ghcr.io/micro-fan/python:latest || true
     - run: TAG_NAME=latest make push_ghcr_image
+    - run: TAG_NAME=latest-helm BUILD_HELM=1 make push_ghcr_image
