--- a/Dockerfile.base_python
+++ b/Dockerfile.base_python
@@ -20,6 +20,10 @@ RUN ./install_basic_packages.sh
 COPY base_python/bootstrap/ /bootstrap
 WORKDIR /bootstrap
 RUN ./prepare_environment.py
+ARG BUILD_HELM=0
+RUN if [ "$BUILD_HELM" = "1" ]; then \
+    curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash \
+    ; fi
 
 # setup supervisor
 # setup logdir and declare as volume
