--- a/Dockerfile.base_python
+++ b/Dockerfile.base_python
@@ -14,16 +14,14 @@ ENV PYTHONPATH=.
 ENV CONTAINER_TYPE base_python
 ENV LOGSTASH_HOST localhost
 
-COPY base_python/install_basic_packages.sh .
+ARG BUILD_HELM=0
+COPY base_python/*.sh ./
 RUN ./install_basic_packages.sh
+RUN ./install_helm_packages.sh
 
 COPY base_python/bootstrap/ /bootstrap
 WORKDIR /bootstrap
 RUN ./prepare_environment.py
-ARG BUILD_HELM=0
-RUN if [ "$BUILD_HELM" = "1" ]; then \
-    curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash \
-    ; fi
 
 # setup supervisor
 # setup logdir and declare as volume
