--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -6,8 +6,10 @@ on:
       - 'master'
 
 jobs:
-
   save-container:
+    strategy:
+      matrix:
+        py_version: [3.9, 3.10, 3.11]
     name: create and save container
     runs-on: ubuntu-20.04
     steps:
@@ -18,5 +20,12 @@ jobs:
         username: ${{ github.repository_owner }}
         password: ${{ secrets.GHCR_TOKEN }}
     - run: docker pull ghcr.io/micro-fan/python:latest || true
-    - run: TAG_NAME=latest make push_ghcr_image
-    - run: TAG_NAME=latest-helm BUILD_HELM=1 make push_ghcr_image
+    - run: >
+        PY_VERSION=${{ matrix.py_version }}
+        TAG_NAME=latest-py${{ matrix.py_version }}
+        make push_ghcr_image
+    - run: >
+        BUILD_HELM=1
+        PY_VERSION=${{ matrix.py_version }}
+        TAG_NAME=latest-py${{ matrix.py_version }}-helm
+        make push_ghcr_image
