--- a/Dockerfile.base_python
+++ b/Dockerfile.base_python
@@ -9,13 +9,13 @@ ENV LC_ALL C.UTF-8
 ENV SUPERVISOR_CONFIG supervisor-app.conf
 ENV LOG_DIR /var/log/fan_logs
 ENV PYTHONPATH=.
-ARG PY_VERSIONg=python3.9
+ARG PY_VERSION=python3.9
 
 # Redefine next variables
 ENV CONTAINER_TYPE base_python
 ENV LOGSTASH_HOST localhost
 
-ARG BUILD_HELM=0
+ARG BUILD_HELM=1
 COPY base_python/*.sh ./
 RUN ./install_basic_packages.sh
 RUN ./install_helm_packages.sh
