--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -17,13 +17,13 @@ jobs:
     name: create and save container
     runs-on: ubuntu-20.04
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-    - uses: docker/login-action@v1
+    - uses: docker/login-action@v3
       with:
         registry: ghcr.io
-        username: ${{ github.repository_owner }}
-        password: ${{ secrets.GHCR_TOKEN }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
     - run: docker pull ghcr.io/micro-fan/python:latest || true
     - run: >
         PY_VERSION=python${{ matrix.py_version }}
