--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -22,7 +22,7 @@ jobs:
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
-        password: ${{ secrets.GHCR_TOKEN }}
+        password: ${{ secrets.GITHUB_TOKEN }}
     - run: docker pull ghcr.io/micro-fan/python:latest || true
     - run: >
         PY_VERSION=python${{ matrix.py_version }}
@@ -37,8 +37,8 @@ jobs:
     - uses: docker/login-action@v3
       with:
         registry: ghcr.io
-        username: ${{ github.repository_owner }}
-        password: ${{ secrets.GHCR_TOKEN }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
     - run: docker pull ghcr.io/micro-fan/python:latest || true
     - run: >
         PY_VERSION=python3.12
